# show-me-the-code

./: .gitignore  .project  LICENSE.txt  README.md
Algorithms/: .pydevproject  README.md
Algorithms/generators/: generators.py
akka-http-quickstart/: build.sbt
assembler_nasm/: hello.asm  interactive.nasm
fonclojure/: CHANGELOG.md  README.md  map.html  project.clj
fonsofttehn/: pom.xml
kubernetes-demo/: Dockerfile  pom.xml
learning-scala/: .cache-main  .project  wordcount_test
learning_c/: .cproject  .project  CMakeLists.txt
learning_c/Debug/: learning_c  makefile
learning_c/Debug/src/: learning_c.d  longestLine.d  reverseLines.d  subdir.mk
learning_c/src/: calc.h  calendar.c  cat.c  compareTwoFiles.c  define_proc.c  doubles.c  frequency_chart.c  getch.c  getop.c  ints.c  longestLine.c  main.c  memory.c  minprintf.c  my_grep.c  pointers.c  remove_comment.c  reverse_polish_calc.c  sortLines.c  sorting.c  stack.c  strings.c  table_lookup.c  upperOrLower.c  wordcountC.c  wordounctGeneral.c
learning_django/: .project  .pydevproject  db.sqlite3  manage.py
learning_node/: .project  README.md
multiroomchat/: .project  README.md  package-lock.json  package.json  server.js
nand2tetrisAssembler/: build.sbt
pascal-compiler-interpreter/: .project
react-redux-tutorial/: package-lock.json  package.json
scala_learn/: build.sbt
scraping/: .project  pearson_price_comparison.py  pearson_price_comparisonV2.py  scrape.py
softtehn/: pom.xml
statistics/: intro_to_probability.rmd  intro_to_r_stats.Rmd  intro_to_r_stats_week2.Rmd
trydjango/: db.sqlite3
(+921 files in other folders)
